[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuObjects" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="MenuObjects"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 0, 0, 1 )

[node name="Title" type="RichTextLabel" parent="MenuObjects"]
margin_left = 118.1
margin_top = 80.0
margin_right = 902.1
margin_bottom = 520.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
text = "Chess but Aids"

[node name="Server" type="Button" parent="MenuObjects"]
margin_left = 121.339
margin_top = 161.96
margin_right = 220.339
margin_bottom = 181.96
rect_pivot_offset = Vector2( 67.7107, 26.49 )
text = "Server"

[node name="Client" type="Button" parent="MenuObjects"]
margin_left = 119.625
margin_top = 191.111
margin_right = 218.625
margin_bottom = 211.111
rect_pivot_offset = Vector2( 67.7107, 26.49 )
text = "Client"

[node name="IP" type="TextEdit" parent="MenuObjects"]
margin_left = 143.95
margin_top = 114.05
margin_right = 290.95
margin_bottom = 130.05

[node name="Label" type="Label" parent="MenuObjects"]
margin_left = 120.65
margin_top = 116.85
margin_right = 160.65
margin_bottom = 130.85
custom_colors/font_color = Color( 1, 0.890196, 0, 1 )
text = "IP:"
[connection signal="pressed" from="MenuObjects/Server" to="." method="_on_Server_pressed"]
[connection signal="pressed" from="MenuObjects/Client" to="." method="_on_Client_pressed"]
